# adi-decision

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  SKILL.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
adi/: __init__.py
adi/core/: __init__.py  decision_engine.py  explain.py  fuzzy.py  learning.py  mcda.py  policy.py  scenarios.py  uncertainty.py
adi/interfaces/: agent_adapter.py  api.py  cli.py
adi/packs/_example/: criteria.yaml
adi/schemas/: __init__.py  decision_output.py  decision_request.py
docs/: PUBLISHING.md
tests/: test_decision_engine.py  test_explain.py  test_fuzzy.py  test_mcda.py  test_policy.py  test_schemas.py  test_uncertainty.py
